--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,9 @@
       You need to enable JavaScript to run this app.
     </noscript>
     <div id="root"></div>
+    <script type="text/javascript" src='https://webapi.amap.com/maps?v=1.4.8&key=fd73199240ef1a8ffe2c3f86f412d8d9&plugin=AMap.ToolBar'></script>
+    <!-- UI组件库 1.0 -->
+    <script src="https://webapi.amap.com/ui/1.0/main.js?v=1.0.11"></script>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
